--- a/styles/scss/common/_navigation.module.scss
+++ b/styles/scss/common/_navigation.module.scss
@@ -43,6 +43,7 @@
         }
         .navLink{
             margin: 0px 26px;
+            padding: 2px 3px;
             @media screen and (min-width:$m){
                 margin: 20px 26px;
             }
